test/users/thom/returnGeneric.good
returnGeneric.chpl:5: In function 'foo':
returnGeneric.chpl:6: error: type mismatch in assignment from C(int(64)) to C
